feat: multiple delete by task IDs, change swagger, less than in expiration date
